--- a/exploration_template.ipynb
+++ b/exploration_template.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,249 @@
    "source": [
     "> Load in your dataset and describe its properties through the questions below.\n",
     "Try and motivate your exploration goals through this section."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load csv into dataframe\n",
+    "Loan_df = pd.read_csv('prosperLoanData.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ListingKey</th>\n",
+       "      <th>ListingNumber</th>\n",
+       "      <th>ListingCreationDate</th>\n",
+       "      <th>CreditGrade</th>\n",
+       "      <th>Term</th>\n",
+       "      <th>LoanStatus</th>\n",
+       "      <th>ClosedDate</th>\n",
+       "      <th>BorrowerAPR</th>\n",
+       "      <th>BorrowerRate</th>\n",
+       "      <th>LenderYield</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LP_ServiceFees</th>\n",
+       "      <th>LP_CollectionFees</th>\n",
+       "      <th>LP_GrossPrincipalLoss</th>\n",
+       "      <th>LP_NetPrincipalLoss</th>\n",
+       "      <th>LP_NonPrincipalRecoverypayments</th>\n",
+       "      <th>PercentFunded</th>\n",
+       "      <th>Recommendations</th>\n",
+       "      <th>InvestmentFromFriendsCount</th>\n",
+       "      <th>InvestmentFromFriendsAmount</th>\n",
+       "      <th>Investors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1021339766868145413AB3B</td>\n",
+       "      <td>193129</td>\n",
+       "      <td>2007-08-26 19:09:29.263000000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>2009-08-14 00:00:00</td>\n",
+       "      <td>0.16516</td>\n",
+       "      <td>0.1580</td>\n",
+       "      <td>0.1380</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-133.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10273602499503308B223C1</td>\n",
+       "      <td>1209647</td>\n",
+       "      <td>2014-02-27 08:28:07.900000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Current</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.12016</td>\n",
+       "      <td>0.0920</td>\n",
+       "      <td>0.0820</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0EE9337825851032864889A</td>\n",
+       "      <td>81716</td>\n",
+       "      <td>2007-01-05 15:00:47.090000000</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>2009-12-17 00:00:00</td>\n",
+       "      <td>0.28269</td>\n",
+       "      <td>0.2750</td>\n",
+       "      <td>0.2400</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-24.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0EF5356002482715299901A</td>\n",
+       "      <td>658116</td>\n",
+       "      <td>2012-10-22 11:02:35.010000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Current</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.12528</td>\n",
+       "      <td>0.0974</td>\n",
+       "      <td>0.0874</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-108.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0F023589499656230C5E3E2</td>\n",
+       "      <td>909464</td>\n",
+       "      <td>2013-09-14 18:38:39.097000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Current</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.24614</td>\n",
+       "      <td>0.2085</td>\n",
+       "      <td>0.1985</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-60.27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 81 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ListingKey  ListingNumber            ListingCreationDate  \\\n",
+       "0  1021339766868145413AB3B         193129  2007-08-26 19:09:29.263000000   \n",
+       "1  10273602499503308B223C1        1209647  2014-02-27 08:28:07.900000000   \n",
+       "2  0EE9337825851032864889A          81716  2007-01-05 15:00:47.090000000   \n",
+       "3  0EF5356002482715299901A         658116  2012-10-22 11:02:35.010000000   \n",
+       "4  0F023589499656230C5E3E2         909464  2013-09-14 18:38:39.097000000   \n",
+       "\n",
+       "  CreditGrade  Term LoanStatus           ClosedDate  BorrowerAPR  \\\n",
+       "0           C    36  Completed  2009-08-14 00:00:00      0.16516   \n",
+       "1         NaN    36    Current                  NaN      0.12016   \n",
+       "2          HR    36  Completed  2009-12-17 00:00:00      0.28269   \n",
+       "3         NaN    36    Current                  NaN      0.12528   \n",
+       "4         NaN    36    Current                  NaN      0.24614   \n",
+       "\n",
+       "   BorrowerRate  LenderYield  ...  LP_ServiceFees  LP_CollectionFees  \\\n",
+       "0        0.1580       0.1380  ...         -133.18                0.0   \n",
+       "1        0.0920       0.0820  ...            0.00                0.0   \n",
+       "2        0.2750       0.2400  ...          -24.20                0.0   \n",
+       "3        0.0974       0.0874  ...         -108.01                0.0   \n",
+       "4        0.2085       0.1985  ...          -60.27                0.0   \n",
+       "\n",
+       "   LP_GrossPrincipalLoss  LP_NetPrincipalLoss LP_NonPrincipalRecoverypayments  \\\n",
+       "0                    0.0                  0.0                             0.0   \n",
+       "1                    0.0                  0.0                             0.0   \n",
+       "2                    0.0                  0.0                             0.0   \n",
+       "3                    0.0                  0.0                             0.0   \n",
+       "4                    0.0                  0.0                             0.0   \n",
+       "\n",
+       "   PercentFunded  Recommendations InvestmentFromFriendsCount  \\\n",
+       "0            1.0                0                          0   \n",
+       "1            1.0                0                          0   \n",
+       "2            1.0                0                          0   \n",
+       "3            1.0                0                          0   \n",
+       "4            1.0                0                          0   \n",
+       "\n",
+       "  InvestmentFromFriendsAmount Investors  \n",
+       "0                         0.0       258  \n",
+       "1                         0.0         1  \n",
+       "2                         0.0        41  \n",
+       "3                         0.0       158  \n",
+       "4                         0.0        20  \n",
+       "\n",
+       "[5 rows x 81 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check to ensure it was read in properly\n",
+    "Loan_df.head()"
    ]
   },
   {
@@ -189,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
