Created title and dataset intro

--- a/exploration_template.ipynb
+++ b/exploration_template.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (Dataset Exploration Title)\n",
-    "## by (your name here)\n",
+    "# Udacity - Communicate Data Findings (Dataset: Loan Data from Prosper\n",
+    "## by Justin Olgui\n",
     "\n",
     "## Preliminary Wrangling\n",
     "\n",
-    "> Briefly introduce your dataset here."
+    "This dataset contains data from over 100,000 loans. Each row contains information about the borrower such as APR, Employment status, credit rating, term, occupation, etc. Who is prosper? Prosper is a San Francisco based company in the peer-to-peer lending marketplace in the United States. Since 2005, Prosper has facilitated more than $15 billion in loans to more than 930,000 people."
    ]
   },
   {
