--- a/exploration_template.ipynb
+++ b/exploration_template.ipynb
@@ -12,10 +12,10 @@
     "This dataset contains data from over 100,000 prosper loans. <br>\n",
     "Each row contains information about a specific loan that was funded through the Prosper marketplace. <br>\n",
     "\n",
-    "Who is prosper? <br>\n",
+    "#### Who is prosper? <br>\n",
     "Prosper is a San Francisco based company in the peer-to-peer lending marketplace in the United States. Since 2005, Prosper has facilitated more than $15 billion in loans to more than 930,000 people. <br>\n",
     "\n",
-    "What is peer2peer lending? <br>\n",
+    "#### What is peer2peer lending? <br>\n",
     "For those who are not familiar, Prosper does not actually lend money, they essentially provide a marketplace for lenders and borrowers to meet, think online dating for loans. As a prospective borrower, you would go through the process of filling out an application, why do you want money, how much do you make, are you employed and so on. They will then assign you a Prosperscore and put your loan up on their marketplace at which point lenders who are looking for higher rate investment returns can choose to fund a portion, or the entirety of your loan. Some of the information on our borrower includes but is not limited to APR, Employment status, credit rating, term, occupation, etc. "
    ]
   },
@@ -2192,7 +2192,9 @@
   {
    "cell_type": "code",
    "execution_count": 524,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2223,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2246,7 @@
     "listingCat_median_APR_val = listingCat_median_APR.sort_values(by='BorrowerAPR')\n",
     "listingCat_median_APR = list(listingCat_median_APR_val['ListingCategory'])\n",
     "#Create boxplot\n",
-    "ax = sb.boxplot(data = Condensed_prosper, x = 'BorrowerAPR', y = 'ListingCategory', color=\"royalblue\", order=listingCat_median_APR);\n",
+    "ax = sb.boxplot(data = Condensed_prosper, x = 'BorrowerAPR', y = 'ListingCategory',color=\"royalblue\" , order=listingCat_median_APR);\n",
     "plt.gcf().set_size_inches(16, 12);\n",
     "plt.title('BorrowerAPR by Listing Category');\n",
     "plt.xlabel('BorrowerAPR')\n",
@@ -2896,6 +2898,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
