--- a/Prosper_Loan_Data_Slides.ipynb
+++ b/Prosper_Loan_Data_Slides.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "#### What is peer2peer lending?\n",
     "\n",
-    "For those who are not familiar, Prosper does not actually lend money, they essentially provide a marketplace for lenders and borrowers to meet, think online dating for loans. As a prospective borrower, you would post a loan request to the marketplace and investors can choose to fund your loan."
+    "For those who are not familiar, Prosper does not actually lend money, they essentially provide a marketplace for lenders and borrowers to meet, think online dating for loans. As a prospective borrower, you would go through the process of filling out an application, why do you want money, how much do you make, are you employed and so on. They will then assign you a Prosperscore and put your loan up on their marketplace at which point lenders who are looking for higher rate investment returns can choose to fund a portion, or the entirety of your loan. Some of the information on our borrower includes but is not limited to APR, Employment status, credit rating, term, occupation, etc. "
    ]
   },
   {
@@ -244,7 +244,7 @@
    "metadata": {
     "scrolled": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
